--- a/client/index.html
+++ b/client/index.html
@@ -26,12 +26,13 @@
         var pass = $('#pass')
         $('.loginButton').on('click', function(event) {
             if (nombreUsuario.val() != "" && pass.val() != "") {
-                $.post('/client', {
+                $.post('/login', {
                     user: nombreUsuario.val(),
                     pass: pass.val()
                 }, function(response) {
                     if (response == "Validado") {
                         window.location.href = "http://localhost:8083/main.html"
+                        window.addEventListener = "/events"
                     }
                 })
             } else {
